; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_main.c___bnx2x_vlan_configure_vid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_main.c___bnx2x_vlan_configure_vid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@RAMROD_COMP_WAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnx2x*, i32, i32)* @__bnx2x_vlan_configure_vid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__bnx2x_vlan_configure_vid(%struct.bnx2x* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bnx2x*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.bnx2x* %0, %struct.bnx2x** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %10 = call i64 @IS_PF(%struct.bnx2x* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %3
  store i64 0, i64* %8, align 8
  %13 = load i32, i32* @RAMROD_COMP_WAIT, align 4
  %14 = call i32 @__set_bit(i32 %13, i64* %8)
  %15 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %18 = getelementptr inbounds %struct.bnx2x, %struct.bnx2x* %17, i32 0, i32 1
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @bnx2x_set_vlan_one(%struct.bnx2x* %15, i32 %16, i32* %20, i32 %21, i64* %8)
  store i32 %22, i32* %7, align 4
  br label %33

23:                                               ; preds = %3
  %24 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %27 = getelementptr inbounds %struct.bnx2x, %struct.bnx2x* %26, i32 0, i32 0
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @bnx2x_vfpf_update_vlan(%struct.bnx2x* %24, i32 %25, i32 %30, i32 %31)
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %23, %12
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local i64 @IS_PF(%struct.bnx2x*) #1

declare dso_local i32 @__set_bit(i32, i64*) #1

declare dso_local i32 @bnx2x_set_vlan_one(%struct.bnx2x*, i32, i32*, i32, i64*) #1

declare dso_local i32 @bnx2x_vfpf_update_vlan(%struct.bnx2x*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
